--- a/package.json
+++ b/package.json
@@ -17,15 +17,13 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-redux": "^9.2.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^0.0.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "webpack server --env port=3000 --env mode=development",
+    "prod": "webpack --env mode=production"
   },
   "eslintConfig": {
     "extends": [
@@ -44,5 +42,36 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/core": "^7.21.4",
+    "@babel/preset-env": "^7.21.4",
+    "@babel/preset-react": "^7.18.6",
+    "@babel/preset-typescript": "^7.21.4",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
+    "babel-loader": "^9.1.2",
+    "copy-webpack-plugin": "^13.0.0",
+    "html-webpack-plugin": "^5.5.1",
+    "mini-css-extract-plugin": "^2.9.2",
+    "css-loader": "^6.11.0",
+    "style-loader": "^3.3.2",
+    "ts-loader": "^9.4.2",
+    "sass": "^1.68.0",
+    "sass-loader": "^13.3.3",
+    "ts-node": "^10.9.1",
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^5.2.2",
+    "@svgr/webpack": "^8.1.0",
+    "@types/file-saver": "^2.0.7",
+    "@types/js-cookie": "^3.0.6",
+    "@types/node": "^18.15.11",
+    "@types/react": "^18.0.28",
+    "@types/react-highlight-words": "^0.20.0",
+    "dotenv": "^16.3.1",
+    "file-loader": "^6.2.0",
+    "node-sass": "^9.0.0",
+    "react-refresh": "^0.14.0",
+    "typescript": "^5.2.2",
+    "webpack": "^5.99.5"
   }
 }
