--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.126",
-    "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "antd": "^5.26.6",
     "axios": "^1.10.0",
+    "framer-motion": "^12.23.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-redux": "^9.2.0",
@@ -49,29 +49,29 @@
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.21.4",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
-    "babel-loader": "^9.1.2",
-    "copy-webpack-plugin": "^13.0.0",
-    "html-webpack-plugin": "^5.5.1",
-    "mini-css-extract-plugin": "^2.9.2",
-    "css-loader": "^6.11.0",
-    "style-loader": "^3.3.2",
-    "ts-loader": "^9.4.2",
-    "sass": "^1.68.0",
-    "sass-loader": "^13.3.3",
-    "ts-node": "^10.9.1",
-    "webpack-cli": "^6.0.1",
-    "webpack-dev-server": "^5.2.2",
     "@svgr/webpack": "^8.1.0",
     "@types/file-saver": "^2.0.7",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^18.15.11",
-    "@types/react": "^18.0.28",
+    "@types/react": "^19.1.8",
     "@types/react-highlight-words": "^0.20.0",
+    "babel-loader": "^9.1.2",
+    "copy-webpack-plugin": "^13.0.0",
+    "css-loader": "^6.11.0",
     "dotenv": "^16.3.1",
     "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.5.1",
+    "mini-css-extract-plugin": "^2.9.2",
     "node-sass": "^9.0.0",
     "react-refresh": "^0.14.0",
+    "sass": "^1.68.0",
+    "sass-loader": "^13.3.3",
+    "style-loader": "^3.3.2",
+    "ts-loader": "^9.4.2",
+    "ts-node": "^10.9.1",
     "typescript": "^5.2.2",
-    "webpack": "^5.99.5"
+    "webpack": "^5.99.5",
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^5.2.2"
   }
 }
